Fix footer text-align

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,6 +50,7 @@ footer {
 
   h2 {
     font-size: calc(var(--responsiveUnit) * 1);
+    text-align: center;
 
     #heart {
       color: $danger;
